--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "oauth-1.0a": "^2.2.6",
     "zod": "^3.22.4"
